--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "start": "node server/index.js",
     "dev": "node --watch server/index.js"
   },
-  "keywords": ["domain", "monitoring", "whois", "docker"],
+  "keywords": [
+    "domain",
+    "monitoring",
+    "whois",
+    "docker"
+  ],
   "author": "Yutian81",
   "license": "MIT",
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "node-cron": "^3.0.3",
-    "node-fetch": "^2.7.0"
+    "node-cron": "^3.0.3"
   }
 }
